--- a/index.css
+++ b/index.css
@@ -204,32 +204,46 @@
 background-color:#f5f5f5 ;
 }
 .container2-wrapper {
-    border: 3px solid darkred;
     display: flex;
     margin-top: 3%;
 }
 .container2-txt{
-    border: 1px solid darkblue;
-    
+    margin-top: 3%;
+    margin-bottom: 3%;
     width: 50%;
-    
-
 }
 .container2-video{
-    border: 1px solid darkgoldenrod;
 }
 .container2-txt-pharagraph {
     margin-top: 2%;
 }
 .container2-txt-list {
-
     margin-top: 1%;
-    
-    
+    margin-left: 5%;
 }
 .container2-video {
     width: 50%;
-    
 }
+.container2-video-item {
+    margin-left: 5%;
+    margin-top: 5%;
+    cursor: pointer;
+}
+.container3 {
+    border:solid red 2px;
+    display: flex;
+}
+.container3-subform {
+    border: solid black 2px;
+}
+.container3-photo {
+    width: 400px;
+    height: 200px;
+    background-image: url(./Fotot/docotrinfosubbutton1.jpg);
+    background-size: cover;
+    border-radius: 35px;
+    box-shadow: 0 20px 20px -20px #000;
+}
+
 
 
