--- a/index.css
+++ b/index.css
@@ -6,8 +6,17 @@
 }
 
 .content-center{
-    width: 80%;
+    max-width: 1400px;
     margin: auto;
+    height: 100%;
+    padding: 0 40px;
+}
+.pv-40px {
+    padding-bottom: 40px;
+    padding-top: 40px;
+}
+.vh-60 {
+    height: 60vh;   
 }
 .icon-menu-item
 {
@@ -56,8 +65,8 @@
 .banner-wrapper {
     display: flex;
     justify-content: space-between;
-    height: 400px;
-    margin-top: 3%;
+    align-items: center;
+    height: 100%;
 }
 
 .banner-items {
@@ -81,8 +90,7 @@
     margin-top: 3%;
     font-size: xx-large;
 }
-.banner-item-text {
-   
+.banner-item-text {   
     margin-top: 3%;
 }
 .banner-item-button {
@@ -127,18 +135,17 @@
 }
 .banner-photo {
     align-self: center;
-    
+    width: 50%;
 }
 
 .banner-photo-item {
-    width: 550px;
+    width: 100%;
     box-shadow: 0 20px 20px -20px #000;
+
     
 }
 .container {
     display: flex;
-    margin-top: 3%;
-    
 }
 .container-left {
     width: 50%;
@@ -201,18 +208,16 @@
     color: black;
 }
 .container2 {
-background-color:#f5f5f5 ;
+    background-color:#f5f5f5 ;
 }
 .container2-wrapper {
     display: flex;
-    margin-top: 3%;
+    gap: 20px;
 }
-.container2-txt{
+.container2-txt {
     margin-top: 3%;
     margin-bottom: 3%;
     width: 50%;
-}
-.container2-video{
 }
 .container2-txt-pharagraph {
     margin-top: 2%;
@@ -222,19 +227,30 @@ background-color:#f5f5f5 ;
     margin-left: 5%;
 }
 .container2-video {
+    display: flex;
     width: 50%;
+    
+    align-items: center;
 }
 .container2-video-item {
-    margin-left: 5%;
-    margin-top: 5%;
     cursor: pointer;
+    width: 100%;
 }
 .container3 {
-    border:solid red 2px;
+   
+}
+.container3-wrapper {
     display: flex;
+    justify-content: space-between;
+    gap: 30px;
+}
+.container3-txt-high {
+    color: brown;
+    font-size: xx-large;
 }
 .container3-subform {
-    border: solid black 2px;
+    margin-top: 2%;
+    
 }
 .container3-photo {
     width: 400px;
@@ -244,6 +260,44 @@ background-color:#f5f5f5 ;
     border-radius: 35px;
     box-shadow: 0 20px 20px -20px #000;
 }
-
+.container3-subform-button {
+    color: #fff;
+    background: #2196f3;
+    width: 250px;
+    padding: 10px;
+    font-size: larger;
+    cursor: pointer;
+    border: 0;
+}
+.container3-subform-button:hover {
+    background-color: black;
+}
+.container3-subform-input {
+    width: 380px;
+    padding: 9px;
+    font-size: larger;
+    border: 1px solid #ebd6b7;
+}
+.container3-txt-low{
+    margin-top: 2%;
+}
+.footer {
+}
+.footer-wrapper {
+    display: flex;
+    justify-content: space-between;
+    border-top: 1px solid gray;
+    border-bottom: 1px solid gray;
+}
+.footer-items {
+    
+    
+}
+.footer-items-title {
+    margin-top: 15px;
+}
+.footer-items-txt {
+    margin-top: 30px;
+}
 
 
