--- a/Home.css
+++ b/Home.css
@@ -146,6 +146,7 @@
 }
 .container {
     display: flex;
+    align-items: center;
 }
 .container-left {
     width: 50%;
@@ -209,6 +210,8 @@
 }
 .container2 {
     background-color:#f5f5f5 ;
+    
+    
 }
 .container2-wrapper {
     display: flex;
@@ -237,12 +240,13 @@
     width: 100%;
 }
 .container3 {
-   
 }
 .container3-wrapper {
     display: flex;
     justify-content: space-between;
     gap: 30px;
+    
+    
 }
 .container3-txt-high {
     color: brown;
