--- a/LoginForm.css
+++ b/LoginForm.css
@@ -1,23 +1,75 @@
-.body {
-    background-color: #ebebeb;
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: 'Montserrat', sans-serif;
 }
 .container {
-    border: 2px solid darkred;
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: #ebebeb;
 }
-.container-1 {
+.container-loginform {
+    background:#fff;
+    width: 560px;
+    height: 560px;
+    padding-right: 85px;
+    padding-left: 85px;
+    padding-top: 55px;
+    padding-bottom: 55px;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
     
-    border: 2px solid darkblue;
 }
-.container-1-input {
+.container-loginform-items {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+.loginform-title {
+    font-size: xx-large;
+    
+}
+.loginform-input {
     width: 100%;
     height: 55px;
-    margin-top: 8px;
-    margin-bottom: 30px;
-}
-.container-1-pass {
+    font-size: 18px;
+    padding: 0 25px;
     
+}
+.loginform-usernamepassword {
+    margin-top: 30px;
+    margin-bottom: 5px;
+    font-size: small;
+
+}
+.loginform-checkbox {
+    display: flex;
+    justify-content: space-between;
+    cursor: pointer;
+    font-size: small;
+    color: grey;
+    margin-top: 10px;
+}
+.container-loginform-button {
+    margin-top: 10%;
+}
+.loginform-button {
+    width: 150px;
+    padding: 15px;
+    border-radius: 27px;
+    font-size: larger;
+    cursor: pointer;
+    background-color: #333;
+    color: white;
+    border: 0;
+    transition: 0.5s;
+    
+    
+}
+.loginform-button:hover {
+    background-color:green ;
 }
