--- a/AboutUs.css
+++ b/AboutUs.css
@@ -48,22 +48,40 @@
 }
 .headconteiner {
     display: flex;
+    align-items: center;
+    border: solid yellow 2px;
+    justify-content: space-around;
+    background-color:  #a9c2da;
 }
 .colorcontainer1 {
     display: flex;
-    height: 575px;
-    background-color:  #a9c2da;
+    align-items: center;
+    border: solid green 2px;
+    justify-content: space-around;
 }
 .conteinerwrapper {
     display: flex;
+    border: solid red 2px;
+    align-items: center;
+    justify-content: space-around;
+    margin-top: 2%;
 }
 .FirstPicture1 {
+    background-image: url(./Fotot/doctorboy1.jpg);
+    background-size: cover;
+    display: block;
+    position: relative;
+    box-shadow: 0 0 40px 0 rgb(0 0 0 / 20%);
     width: 430px;
     height: 640px;
     margin-top: 5%;
     border: solid yellow 2px;
 }
 .SecondPicture2 {
+    background-image: url(./Fotot/doctorgirl1.jpg);
+    background-size: cover;
+    display: block;
+    box-shadow: 0 0 40px 0 rgb(0 0 0 / 20%);
     width: 380px;
     height: 510px;
     margin-top: 25%;
