--- a/AboutUs.css
+++ b/AboutUs.css
@@ -48,23 +48,21 @@
 }
 .headconteiner {
     display: flex;
-    align-items: center;
-    border: solid yellow 2px;
     justify-content: space-around;
-    background-color:  #a9c2da;
+    height: 900px
 }
 .colorcontainer1 {
     display: flex;
-    align-items: center;
-    border: solid green 2px;
     justify-content: space-around;
+    width: 100%;
+    height: 575px;
+    background-color:  #a9c2da;
 }
 .conteinerwrapper {
     display: flex;
-    border: solid red 2px;
-    align-items: center;
     justify-content: space-around;
     margin-top: 2%;
+    margin-right: 5%;
 }
 .FirstPicture1 {
     background-image: url(./Fotot/doctorboy1.jpg);
@@ -75,7 +73,7 @@
     width: 430px;
     height: 640px;
     margin-top: 5%;
-    border: solid yellow 2px;
+    right: 75%;
 }
 .SecondPicture2 {
     background-image: url(./Fotot/doctorgirl1.jpg);
@@ -84,17 +82,20 @@
     box-shadow: 0 0 40px 0 rgb(0 0 0 / 20%);
     width: 380px;
     height: 510px;
-    margin-top: 25%;
-    border: solid green 2px;
+    margin-top: 20%;
+    position: absolute;
 }
 .TextofAboutUs {
     width: 500px;
     height: 400px;
     background-color: #4d5a65;
-    border: solid rebeccapurple 2px;
     display: flex;
     flex-direction: column;
     padding: 2rem;
+    margin-top: 5%;
+    position: absolute;
+    top: 10%;
+    left: 55%;
 }
 .TestAboutUsColor1 {
     color: white;
@@ -102,7 +103,7 @@
     font-size: 3rem;
 }
 .TestAboutUsColor2 {
-    margin-top: 3%;
+    margin-top: 7%;
     color: white;
     font-size: 1rem;
 }
@@ -113,7 +114,7 @@
 }
 .TextofAboutUs-Button {
     width: max-content;
-    margin-top: 3%;
+    margin-top: 10%;
     color: white;
     background-color: #4d5a65;
     padding: 0.5rem;
@@ -122,7 +123,32 @@
     cursor: pointer;
     display: flex;
 }
+.TextofAboutUs-Button-link {
+    text-decoration: none;
+    color: white;
+}
+.TextofAboutUs-Button-link:hover {
+    color: #4d5a65;
+}
 .TextofAboutUs-Button:hover {
     background-color: white;
     color: #4d5a65;
+}
+.footer-wrapper {
+    display: flex;
+    justify-content: space-between;
+    border-top: 1px solid gray;
+    border-bottom: 1px solid gray;
+    margin-bottom: 3%;
+}
+.footer-items-title {
+    margin-top: 15px;
+}
+.footer-items-txt {
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+.foter-item-txt-link {
+    text-decoration: none;
+    color: black;
 }
