--- a/css/ContactUS.css
+++ b/css/ContactUS.css
@@ -181,6 +181,7 @@
     font-size: 18px;
     padding: 8px 30px;
     border-radius: 6px;
+    margin-top: 10px;
     background-color: black;
     color: white;
     outline: none;
@@ -190,4 +191,11 @@
 .button:hover {
     background-color: #ebebeb;
     color: black;
+    transition: all 1s;
+}
+.error-hint {
+    font-size: 10px;
+    color: red;
+    margin-left: 10px;
+    display: none;
 }
