--- a/public/css/contactUS.css
+++ b/public/css/contactUS.css
@@ -96,6 +96,8 @@
    width: 35px;
    height: 35px;
    cursor: crosshair;
+   background-image: url(../fotot/icons8-address-50.png);
+   background-size: cover;
 }
 .icon-adress:hover {
     background-color: #ebebeb;
@@ -105,6 +107,8 @@
     height: 35px;
     margin-top: 20px;
     cursor: crosshair;
+    background-image: url(../fotot/icons8-phone-30.png);
+    background-size: cover;
 }
 .icon-phone:hover {
     background-color: #ebebeb;
@@ -114,6 +118,8 @@
     height: 35px;
     margin-top: 20px;
     cursor: crosshair;
+    background-image: url(../fotot/icons8-mail-50.png);
+    background-size: cover;
 }
 .icon-email:hover {
     background-color: #ebebeb;
@@ -190,9 +196,11 @@
     color: black;
     transition: all 1s;
 }
-.error-hint {
+.error {
     font-size: 10px;
     color: red;
     margin-left: 10px;
-    display: none;
+}
+.hide {
+    opacity: 0;
 }
