--- a/view/public/css/loginForm.css
+++ b/view/public/css/loginForm.css
@@ -40,7 +40,7 @@
     padding: 0 25px;
     
 }
-.loginform-usernamepassword {
+.loginform-emailpassword {
     margin-top: 30px;
     margin-bottom: 5px;
     font-size: small;
