--- a/view/public/css/aboutUs.css
+++ b/view/public/css/aboutUs.css
@@ -28,6 +28,18 @@
     margin-left: 10px;
     font-size: 35px;    
 }
+.navigation {
+    display: flex;
+    justify-content: space-between;
+    
+}
+.navigation-item{
+    display: flex;
+    justify-content: center;
+    width: 130px;
+    font-size: 15px;
+    cursor: pointer;
+}
 .logo-social {
     display: flex;
     width: 8%;
