--- a/view/public/css/contactUS.css
+++ b/view/public/css/contactUS.css
@@ -27,6 +27,18 @@
     margin-left: 10px;
     font-size: 35px;    
 }
+.navigation {
+    display: flex;
+    justify-content: space-between;
+    
+}
+.navigation-item{
+    display: flex;
+    justify-content: center;
+    width: 130px;
+    font-size: 15px;
+    cursor: pointer;
+}
 .logo-social {
     display: flex;
     width: 8%;
@@ -203,4 +215,8 @@
 }
 .hide {
     opacity: 0;
+}
+.foter-item-txt-link {
+    text-decoration: none;
+    color: black;
 }
