--- a/view/public/css/home.css
+++ b/view/public/css/home.css
@@ -6,65 +6,17 @@
 }
 
 .content-center{
-    max-width: 1400px;
+    max-width: 87.5rem;
     margin: auto;
     height: 100%;
-    padding: 0 40px;
+    padding: 0 2.5rem;
 }
 .pv-40px {
-    padding-bottom: 40px;
-    padding-top: 40px;
+    padding-bottom: 2.5rem;
+    padding-top: 2.5rem;
 }
 .vh-60 {
     height: 60vh;   
-}
-.icon-menu-item
-{
-  width: 25px;
-  height: 3px;
-  background-color: black;
-  margin: 6px 0;
-  border-radius: 6px;
- 
-}
-.header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 75px;
-}
-
-.pagename {
-    margin-left: 10px;
-    font-size: 35px;    
-}
-.navigation {
-    display: flex;
-    justify-content: space-between;
-    
-}
-.navigation-item{
-    display: flex;
-    justify-content: center;
-    width: 130px;
-    font-size: 15px;
-    cursor: pointer;
-}
-.logo-social {
-    display: flex;
-    width: 8%;
-    justify-content: space-between;
-}
-.wrapper-icon-pagename {
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    cursor: pointer;
-}
-.logo-social-item {
-    width: 20px;
-    cursor: pointer;
-    
 }
 .banner {
     background-color: #f5f5f5;
@@ -80,36 +32,36 @@
 .banner-items {
     
     justify-content: space-evenly;
-    width: 650px;
-    margin-right: 10%;
+    width: 40.625rem;
+    margin-right: 10rem;
 }
 .banner-item-news {
-    margin-top: 5%;
+    margin-top: 3rem;
     border: 1px solid #dff3e2;
     color: #19a52c;
     background-color: #dff3e2;
-    width: 80px;
-    margin-left: 2%;
-    padding: 5px;
+    width: 5rem;
+    margin-left: 1rem;
+    padding: 0.313rem;
     text-align: center;
     
 }
 .banner-item-title {
-    margin-top: 3%;
-    font-size: xx-large;
+    margin-top: 1.2rem;
+    font-size: 2rem;
 }
 .banner-item-text {   
-    margin-top: 3%;
+    margin-top: 1.2rem;
 }
 .banner-item-button {
     text-align: center;
-    margin-top: 8%;
+    margin-top: 3rem;
     color: #fff;
     background: #2196f3;
-    width: 250px;
-    padding: 10px;
+    width: 15.625rem;
+    padding: 0.625rem;
     border-radius: 3px;
-    font-size: larger;
+    font-size: 1.2rem;
     cursor: pointer;
     transition: 0.5s;
     position: relative;
@@ -149,46 +101,46 @@
     width: 50%;
 }
 .container-left-photo {
-    height: 150px;
-    width: 450px;
+    height: 9.375rem;
+    width: 28.125rem;
     background-image: url(../Fotot/Healthylifestyle1.jpeg);
     background-size: cover;
 }
 .container-right {
     width: 50%;
-    margin-left: 2%;
+    margin-left: 1rem;
 }
 .container-right-items {
     
     display: flex;
     align-items: center;
     justify-content: start;
-    margin-top: 1%;
-    margin-bottom: 2%;
-    margin-left: 1%;
+    margin-top: 0.5rem;
+    margin-bottom: 1rem;
+    margin-left: 0.5rem;
     
     border-bottom:1px solid #f5f5f5;
 }
 .container-right-photo1 {
-    height: 80px;
-    width: 120px;
+    height: 5rem;
+    width: 7.5rem;
     background-image: url(../Fotot/PhysycalActivity1.jpg);
     background-size: cover;
 }
 .container-right-photo2 {
-    height: 80px;
-    width: 120px;
+    height: 5rem;
+    width: 7.5rem;
     background-image: url(../Fotot/HealthyFood1.jpg);
     background-size: cover;
 }
 .container-right-photo3 {
-    height: 80px;
-    width: 120px;
+    height: 5rem;
+    width: 7.5rem;
     background-image: url(../Fotot/HealthySleep1.jpg);
     background-size: cover;
 }
 .container-right-items-tekst {
-    margin-left: 2%;   
+    margin-left: 1rem;   
 }
 .container-items-teks-title {
     font-size: 1rem;
@@ -197,9 +149,9 @@
 }
 .container-items-teks-author {
     color: #6c757d;
-    font-size: 85%;
+    font-size: 0.8rem;
     font-weight: 400;
-    margin-left: 2%;
+    margin-left: 1rem;
 }
 .link-title {
     text-decoration: none;
@@ -207,55 +159,48 @@
 }
 .container2 {
     background-color:#f5f5f5 ;
-    
-    
 }
 .container2-wrapper {
     display: flex;
     gap: 20px;
 }
 .container2-txt {
-    margin-top: 3%;
-    margin-bottom: 3%;
+    margin-top: 3rem;
+    margin-bottom: 3rem;
     width: 50%;
 }
 .container2-txt-pharagraph {
-    margin-top: 2%;
+    margin-top: 1rem;
 }
 .container2-txt-list {
-    margin-top: 1%;
-    margin-left: 5%;
+    margin-top: 0.5rem;
+    margin-left: 3rem;
 }
 .container2-video {
     display: flex;
     width: 50%;
-    
     align-items: center;
 }
 .container2-video-item {
     cursor: pointer;
     width: 100%;
 }
-.container3 {
-}
 .container3-wrapper {
     display: flex;
     justify-content: space-between;
     gap: 30px;
-    
-    
 }
 .container3-txt-high {
     color: brown;
-    font-size: xx-large;
+    font-size: 2rem;
 }
 .container3-subform {
-    margin-top: 2%;
+    margin-top: 1rem;
     
 }
 .container3-photo {
-    width: 400px;
-    height: 200px;
+    width: 25rem;
+    height: 12.5rem;
     background-image: url(../Fotot/docotrinfosubbutton1.jpg);
     background-size: cover;
     border-radius: 35px;
@@ -264,9 +209,9 @@
 .container3-subform-button {
     color: #fff;
     background: #2196f3;
-    width: 250px;
-    padding: 10px;
-    font-size: larger;
+    width: 15.625rem;
+    padding: 0.625rem;
+    font-size: 1.2rem;
     cursor: pointer;
     border: 0;
 }
@@ -274,15 +219,13 @@
     background-color: black;
 }
 .container3-subform-input {
-    width: 380px;
-    padding: 9px;
-    font-size: larger;
+    width: 23.75rem;
+    padding: 0.563rem;
+    font-size: 1.2rem;
     border: 1px solid #ebd6b7;
 }
 .container3-txt-low{
-    margin-top: 2%;
-}
-.footer {
+    margin-top: 1rem;
 }
 .footer-wrapper {
     display: flex;
@@ -290,19 +233,62 @@
     border-top: 1px solid gray;
     border-bottom: 1px solid gray;
 }
-.footer-items {
-    
-    
-}
 .footer-items-title {
-    margin-top: 15px;
+    margin-top: 0.938rem;
 }
 .footer-items-txt {
-    margin-top: 30px;
-    margin-bottom: 30px;
+    margin-top: 1.875rem;
+    margin-bottom: 1.875rem;
 }
 .foter-item-txt-link {
     text-decoration: none;
     color: black;
 }
+/* Desktop small */
+@media screen and (max-width: 992px) {
+
+}
+
+/* Tablet */
+@media screen and (max-width: 768px) {
+    html {
+        font-size: 0.75rem;
+    }
+    .container{
+        flex-direction: column;
+        align-items: unset;
+
+    }
+    .container-left{
+        width: 100%;
+    }
+    .container-right{
+        width: 100%;
+    }
+    .vh-60{
+        height: auto;
+    }
+    .banner-item-button{
+        width: 11.625rem;
+        padding: 0.9rem;
+        font-size: 0.9rem;
+        margin-top: 1rem;
+    }
+    .container3-subform-button{
+        width: 22.75rem;
+    }
+    .container3-subform-input{
+        width: 22.75rem;
+    }
+    .container3-wrapper{
+        flex-direction: column;
+    }
+}
+/* Mobile */
+@media screen and (max-width: 576px) {
+    html {
+        font-size: 0.6rem;
+    }
+}
+
 
